Refactored functionality and tests for asset bulk delete and location bulk delete.  Added location ids for counts in asset listing GET response.
